--- a/.env
+++ b/.env
@@ -47,6 +47,7 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
+
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
@@ -55,3 +56,16 @@ L5_SWAGGER_CONST_HOST="${APP_URL}/api/v1"
 
 PASSPORT_PERSONAL_ACCESS_CLIENT_ID=2
 PASSPORT_PERSONAL_ACCESS_CLIENT_SECRET=DYZFGulgMI3g39ICevMNvuQho6H6AAtxs3NP1Jzp
+
+
+GOOGLE_CLIENT_ID=22408370866-bk0hcni0b0qcg5jn36v5fj2257j3mboo.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=PA8s5FTq6dMBBFOAq3nOf7lu
+GOOGLE_REDIRECT_URL=${APP_URL}/login/google/callback
+
+GITHUB_CLIENT_ID='YOUR GITHUB CLIENT ID'
+GITHUB_CLIENT_SECRET='YOUR GITHUB CLIENT SECRET'
+GITHUB_CALLBACK_URL="${APP_URL}/social-auth/github/callback"
+
+FACEBOOK_CLIENT_ID=672590720804583
+FACEBOOK_CLIENT_SECRET=9e45fe36f209b7bd961aa42ca220dfd7
+FACEBOOK_CALLBACK_URL=${APP_URL}/login/facebook/callback
