--- a/.env
+++ b/.env
@@ -69,3 +69,7 @@ GITHUB_CALLBACK_URL="${APP_URL}/social-auth/github/callback"
 FACEBOOK_CLIENT_ID=672590720804583
 FACEBOOK_CLIENT_SECRET=9e45fe36f209b7bd961aa42ca220dfd7
 FACEBOOK_CALLBACK_URL=${APP_URL}/login/facebook/callback
+
+
+APPLE_CLIENT_ID=''
+APPLE_CLIENT_SECRET=''
