--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "coderello/laravel-passport-social-grant": "^3.0",
-        "darkaonline/l5-swagger": "~8.1.0",
+        "darkaonline/l5-swagger": "8.0.7",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -15,7 +15,8 @@
         "laravel/passport": "^10.1",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.3"
+        "laravel/ui": "^3.3",
+        "socialiteproviders/apple": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
